--- a/client/src/app/features/account/register/register.component.html
+++ b/client/src/app/features/account/register/register.component.html
@@ -5,7 +5,7 @@
         </div>
         <app-text-input label="First Name" formControlName="firstName"/>
         <app-text-input label="Last Name" formControlName="lastName"/>
-        <app-text-input label="Email address" formControlName="email" type="email"/>
+        <app-text-input label="Email address" formControlName="email"/>
         <app-text-input label="Password" formControlName="password" type="password"/>
         
 
