--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="border-b p-3 shadow-md w-full max-h-20 fixed z-50 top-0 bg-white">
     <div class="flex align-middle items-center justify-between max-w-screen-2xl mx-auto">
-        <img routerLink="/" src="/images/logo1.png" alt="app logo" class="max-h-16">
+        <img routerLink="/" src="/images/logox.png" alt="app logo" class="max-h-16">
         <nav class="flex gap-3 my-2 uppercase text-2xl">
             <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact : true}">Home</a>
             <a routerLink="/shop" routerLinkActive="active">Shop</a>
